--- a/source/styles.css
+++ b/source/styles.css
@@ -1,4 +1,4 @@
-.b-logo {
+.b-fullname__circle {
 width: 200px; 
 height: 200px;
 border-radius: 50%;
@@ -9,7 +9,7 @@ position: relative;
 text-align: center;
 }
 
-.b-circle{
+.b-fullname__avatar{
 position: absolute;
 width: 175px; 
 height: 175px;
