--- a/source/index.pug
+++ b/source/index.pug
@@ -1,10 +1,9 @@
 doctype html
 html
 	head
-	meta(charset = 'utf-8')
-	link(href="styles.css" rel="stylesheet")
-	meta(name='viewport', content="initial-scale=1.0, width=device-width")
-	title Webpack app
+		meta(charset = 'utf-8')
+		meta(name='viewport', content="initial-scale=1.0, width=device-width")
+		title Webpack app
 	body
 		div(class="b-fullname")
 			div(class="b-fullname__logo")
@@ -12,5 +11,5 @@ html
 					div(class="b-fullname__avatar")
 			div(class="b-fullname__name")
 				h1 Name
-				h2 surname
+				h2 sur
 				h3 Graphical Designer
