--- a/source/index.pug
+++ b/source/index.pug
@@ -5,11 +5,25 @@ html
 		meta(name='viewport', content="initial-scale=1.0, width=device-width")
 		title Webpack app
 	body
-		div(class="b-fullname")
-			div(class="b-fullname__logo")
-				div(class="b-fullname__circle")
-					div(class="b-fullname__avatar")
-			div(class="b-fullname__name")
-				h1 Name
-				h2 sur
-				h3 Graphical Designer
+		div(class="b-head")
+			div(class="b-head__logo")
+				div(class="b-logo__circle")
+					div(class="b-logo__avatar")
+			div(class="b-head__name")
+				h2 NAME HERE
+				h1 SURNAME
+				h3 GRAPHIC DESIGNER
+		div(class="b-about")
+			div(class="b-about__header")
+				div(class="b-header__icon")
+				div(class="b-header__description")
+			div(class="b-about__content")
+		div(class="b-about")
+			div(class="b-about__header")
+				div(class="b-header__icon")
+				div(class="b-header__description")
+			div(class="b-about__content")
+		
+				
+
+		
